[project]
name = "langgraph-multiagente"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "rich>=14.2.0",
    "wikipedia>=1.4.0",
]
